# gd-cocos-app

./: .editorconfig  CMakeLists.txt  README.md  cocos.cmake
.github/workflows/: build.yml
src/: AppDelegate.cpp  HelloWorldScene.cpp  HelloWorldScene.hpp  log.hpp
